--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -69,4 +69,4 @@ button {
   background-color: red;
   width: 50px;
   height: 40px;
-}
+} */
